cmake_minimum_required(VERSION 3.19)
project(ModernCpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(ModernCpp main.cpp Cpp11/bigSix.cpp Cpp11/function<select_sort>.cpp Cpp11/function<ClassMemberObject>.cpp all.h Cpp11/function_bind.cpp Cpp11/thread.cpp Cpp11/nthThread.cpp Cpp11/mtx.cpp Cpp11/lockGuard.cpp Cpp11/RecursiveMtx.cpp Cpp11/conditionalVar.cpp algorithm/quickSort.cpp Server/Timer.cpp Server/Timer.h Server/HttpRequest.cpp Server/HttpRequest.h Server/Buffer.cpp Server/Buffer.h Server/ThreadPool.cpp Server/ThreadPool.h Cpp11/prefectForward.cpp Cpp11/CopyOptim.cpp Cpp11/passTmpObjOptim.cpp String/String.cpp String/String.h String/testStringMain.cpp Server/Utils.cpp Server/Utils.h DesignPattern/observer_1.cpp DesignPattern/Observer.cpp DesignPattern/Observer.h DesignPattern/CanadaTime.cpp DesignPattern/CanadaTime.h DesignPattern/LondonTime.cpp DesignPattern/LondonTime.h DesignPattern/Subject.cpp DesignPattern/Subject.h DesignPattern/BeiJingTime.cpp DesignPattern/BeiJingTime.h DesignPattern/ObserverMain.cpp)